fix: type email

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </svg>
 
       <div class="tagline">The internet for humans</div>
-      <input type="text" placeholder="Enter your email for updates" />
+      <input type="email" placeholder="Enter your email for updates" />
       <button class="signup-btn">sign up</button>
     </div>
   </body>
