--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Julia - The internet for humans</title>
+
     <style>
       body,
       html {
@@ -30,7 +32,7 @@
         font-size: 24px;
         margin-bottom: 20px;
       }
-      input[type="text"] {
+      input[type="email"] {
         margin-top: 20px;
         padding: 10px;
         width: 200px;
@@ -95,8 +97,80 @@
       </svg>
 
       <div class="tagline">The internet for humans</div>
-      <input type="email" placeholder="Enter your email for updates" />
-      <button class="signup-btn">sign up</button>
+      <form onsubmit="handleSubmit(event)">
+        <input
+          type="email"
+          name="email"
+          placeholder="Enter your email for updates"
+          required
+        />
+        <button type="submit" class="signup-btn">Sign Up</button>
+      </form>
+
+      <div
+        id="modal"
+        class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full"
+        onclick="hideModal()"
+      >
+        <div
+          class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-md bg-white"
+        >
+          <div class="mt-3 text-center">
+            <div
+              class="mx-auto flex items-center justify-center h-12 w-12 rounded-full bg-green-100"
+            >
+              <svg
+                class="h-6 w-6 text-green-600"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <!-- SVG content -->
+              </svg>
+            </div>
+            <h3 class="text-lg leading-6 font-medium text-gray-900">
+              Subscription Successful
+            </h3>
+            <div class="mt-2 px-7 py-3">
+              <p class="text-sm text-gray-500">
+                You are subscribed for updates, thank you.
+              </p>
+            </div>
+            <div class="items-center px-4 py-3">
+              <button
+                id="ok-btn"
+                class="px-4 py-2 bg-green-500 text-white text-base font-medium rounded-md w-full shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-300"
+              >
+                OK
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <script>
+        async function handleSubmit(event) {
+          event.preventDefault();
+          const form = event.target;
+          const formData = new FormData(form);
+          
+          try {
+            const response = await fetch('https://throbbing-wildflower-94f0.mtaylor-247.workers.dev', {
+              method: 'POST',
+              body: formData,
+            });
+      
+            if (response.ok) {
+              showModal();
+            } else {
+              alert('Failed to subscribe. Please try again.');
+            }
+          } catch (error) {
+            console.error('Error:', error);
+            alert('An error occurred. Please try again.');
+          }
+        }
+      </script>
     </div>
   </body>
 </html>
