fix: show modal

--- a/index.html
+++ b/index.html
@@ -149,6 +149,14 @@
       </div>
 
       <script>
+         function showModal() {
+          document.getElementById("modal").style.display = "block";
+        }
+
+        function hideModal() {
+          document.getElementById("modal").style.display = "none";
+        }
+        
         async function handleSubmit(event) {
           event.preventDefault();
           const form = event.target;
