--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           const formData = new FormData(form);
           
           try {
-            const response = await fetch('https://throbbing-wildflower-94f0.mtaylor-247.workers.dev', {
+            const response = await fetch('https://julia-social-worker.mtaylor-247.workers.dev', {
               method: 'POST',
               body: formData,
             });
