--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
 
       .container svg,
       .tagline {
-        width: calc(100% - 40px); /* Adjusts width considering padding */
         max-width: 700px; /* or your preferred max-width */
         height: auto; /* Maintains aspect ratio */
         padding: 0 20px; /* Add desired padding */
@@ -98,7 +97,7 @@
       </svg>
     </div>
  
-       <div class="tagline">The Internet for Humans</div>
+       <div class="tagline"><span>The Internet for Humans</span></div>
  
       
       <form class="flex gap-4 w-full p-5" onsubmit="handleSubmit(event)">
