--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                     const formData = new FormData();
                     formData.append('email', email);
 		    
-                    const response = await fetch('https://julia-social-worker.mtaylor-247.workers.dev', {
+                    const response = await fetch('https://julia-social-email-form.restless-unit-5918.workers.dev', {
                     method: 'POST',
                     body: formData
                 });
